# mcp-dataverse

./: .env  .env-sample  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  proposed_Codex_mcp-dataverse_plan.md  pyrightconfig.json  requirements.txt
app/: mcp-server.py  test.py
docs/: PLANNING.md  README.md
drift/: README.md  drift.py  primitives.py
semantic_croissant/: pyproject.toml  server.py
utils/: MultiMedia.py  add-dataset.py  dataframe.py  dataset_upload_default_full_01.json  ldrecords.py  localtest.py  see_croissant.py  simpletest.py
